cabal-version:      >= 1.18
build-type:         Simple
name:               hlint
version:            2.2.5
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2006-2019
synopsis:           Source code suggestions
description:
    HLint gives suggestions on how to improve your source code.
homepage:           https://github.com/ndmitchell/hlint#readme
bug-reports:        https://github.com/ndmitchell/hlint/issues
data-dir:           data
data-files:
    hlint.yaml
    default.yaml
    Test.hs
    report_template.html
    hs-lint.el
    hlint.1
    hlint.ghci
    HLint_QuickCheck.hs
    HLint_TypeCheck.hs
extra-doc-files:
    README.md
    CHANGES.txt
tested-with:        GHC==8.8.1, GHC==8.6.5, GHC==8.4.4

source-repository head
    type:     git
    location: https://github.com/ndmitchell/hlint.git

flag threaded
    default: True
    manual: True
    description: Build with support for multithreaded execution

flag gpl
    default: True
    manual: True
    description: Use GPL libraries, specifically hscolour

flag ghc-lib
  default: False
  manual: True
  description: Force dependency on ghc-lib-parser even if GHC API in the ghc package is supported

library
    default-language:   Haskell2010
    build-depends:
        base == 4.*, process, filepath, directory, containers,
        unordered-containers, vector, text, bytestring,
        transformers,
        data-default >= 0.3,
        cpphs >= 1.20.1,
        cmdargs >= 0.10,
        yaml >= 0.5.0,
        haskell-src-exts >= 1.21 && < 1.23,
        haskell-src-exts-util >= 0.2.5,
        uniplate >= 1.5,
        ansi-terminal >= 0.6.2,
        extra >= 1.6.6,
        refact >= 0.3,
        aeson >= 1.1.2.0,
        filepattern >= 0.1.1,
        syb >= 0.7,
        mtl >= 2.2.2
    if !flag(ghc-lib) && impl(ghc >= 8.8.0) && impl(ghc < 8.9.0)
        build-depends:
          ghc == 8.8.*,
          ghc-boot-th
    else
        build-depends:
          ghc-lib-parser == 8.8.1.*

    if flag(gpl)
        build-depends: hscolour >= 1.21
    else
        cpp-options: -DGPL_SCARES_ME

    hs-source-dirs:     src
    exposed-modules:
        Language.Haskell.HLint
        Language.Haskell.HLint3
        Language.Haskell.HLint4
    other-modules:
        Paths_hlint
        Apply
        CmdLine
        Grep
        HLint
        HsColour
        Idea
        Report
        Util
        Parallel
        Refact
        Timing
        CC
        Config.Compute
        Config.Haskell
        Config.Read
        Config.Type
        Config.Yaml

        GHC.Util
        GHC.Util.ApiAnnotation
        GHC.Util.View
        GHC.Util.Brackets
        GHC.Util.FreeVars
        GHC.Util.HsDecl
        GHC.Util.HsExpr
        GHC.Util.HsType
        GHC.Util.Pat
        GHC.Util.LanguageExtensions.Type
        GHC.Util.Module
        GHC.Util.Outputable
        GHC.Util.SrcLoc
        GHC.Util.W
        GHC.Util.DynFlags
        GHC.Util.Language.Haskell.GHC.ExactPrint.Types
        GHC.Util.Refact.Utils
        GHC.Util.Refact.Fixity
        GHC.Util.RdrName
        GHC.Util.Scope
        GHC.Util.Unify

        HSE.All
        HSE.Match
        HSE.Reduce
        HSE.Scope
        HSE.Type
        HSE.Unify
        HSE.Util
        Hint.All
        Hint.Bracket
        Hint.Comment
        Hint.Duplicate
        Hint.Export
        Hint.Extensions
        Hint.Import
        Hint.Lambda
        Hint.List
        Hint.ListRec
        Hint.Match
        Hint.Monad
        Hint.Naming
        Hint.NewType
        Hint.Pattern
        Hint.Pragma
        Hint.Restrict
        Hint.Smell
        Hint.Type
        Hint.Unsafe
        Hint.Util
        Test.All
        Test.Annotations
        Test.InputOutput
        Test.Proof
        Test.Translate
        Test.Util


executable hlint
    default-language:   Haskell2010
    build-depends:      base, hlint
    main-is:            src/Main.hs

    ghc-options:        -rtsopts
    if flag(threaded)
        ghc-options:    -threaded
